# articles-api

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  boot.sh  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  config.py  utils.py
app/article/: __init__.py  models.py  routes.py
app/auth/: __init__.py  routes.py
app/commands/: __init__.py  routes.py
app/users/: __init__.py  models.py  routes.py
docs/: __init__.py
docs/components/: __init__.py  responses.py  securitySchemes.py
docs/paths/: __init__.py
docs/paths/article/: __init__.py  articles.py  articles_with_id.py
docs/paths/auth/: __init__.py  login.py  refresh.py
docs/paths/users/: __init__.py  roles.py  users.py  users_with_id.py
migration/: env.py
migration/versions/: 2eed9ea7a903_add_user_and_roles.py  4eb7ade28e9b_add_article.py
tests/: conftest.py  test_article.py  test_commands.py  test_user.py
